--- a/css/main.less
+++ b/css/main.less
@@ -91,7 +91,7 @@ body {
 
     /* For the Task List --------------------------------------- */
     .task-list-container {
-        overflow-y: scroll;
+        overflow-y: auto;
 
         margin-top: 10px;
 
