--- a/source/css/main.less
+++ b/source/css/main.less
@@ -35,7 +35,7 @@ body {
     right: @outside-margin;
     bottom: @outside-margin;
 }
-.side-col {
+#side-col {
     position: absolute;
     top: 51px;
     width: 20%;
@@ -171,7 +171,7 @@ body {
 }
 
 
-.main-col {
+#main-col {
     .whitebox(12px);
     .rounded(5px);
     position: absolute;
