--- a/source/css/main.less
+++ b/source/css/main.less
@@ -115,7 +115,7 @@ body {
                 border-top: none;
             }
 
-            &.completed {
+            &.checked {
                 .opacity(.5);
                 .task-list-item-box {
                     //TODO get check to appear here.
