--- a/source/scripts/templates/tasks.jade
+++ b/source/scripts/templates/tasks.jade
@@ -1,6 +1,6 @@
 - each task in tasks
-    - var klass = (task.checked ? 'task-list-item checked' : 'task-list-item')
-    div(class=klass)
+    - var klass= ((task.checked) ? 'task-list-item checked' : 'task-list-item')
+    div(class=klass, data-classid=task.classID)
         .task-list-item-box
         .task-list-item-text
             .task-list-item-name= task.taskName
