--- a/source/css/main.less
+++ b/source/css/main.less
@@ -45,6 +45,7 @@ body {
     /* For the Class List in top left -------------------------- */
     .class-list-container {
         overflow-y: auto;
+        overflow-x: hidden;
         max-height: 80%;
 
         .whitebox(5px);
@@ -124,26 +125,28 @@ body {
             .task-list-item-box {
                 width: @box-size;
                 height: @box-size;
-                float: left;
-                display: inline;
+                position: absolute;
                 border: 1px solid @line-border-color;
                 .rounded(3px);
-                margin-right: 8px;
             }
             .task-list-item-text {
+                margin-left: @box-size + 8px;
                 float: left;
                 .task-list-item-name {
                     font-size: 1em;
                     letter-spacing: -.0em;
                     font-weight: bold;
+                    white-space: nowrap;
                 }
                 .task-list-item-subtext {
+                    white-space: nowrap;
                     font-size: 0.85em;
                     margin-top: .2em;
                 }
             }
             .task-list-item-tag {
-                float: right;
+                position: absolute;
+                right: 8px;
                 color: white;
                 font-size: .8em;
                 font-weight: bold;
@@ -275,12 +278,104 @@ body {
 }
 
 @media screen and (min-width: 0px) and (max-width: 900px) {
+    body {
+        font-size: 11px;
+    }
+
+    .page {
+        &.calendar {
+            @calendar-margin: 0px;
+            top: @toolbar-height + @calendar-margin;
+            left: @calendar-margin;
+            right: @calendar-margin;
+            bottom: @calendar-margin;
+
+            .cal-cell {
+                padding: 0px;
+
+                &.today {
+                    background-color: darken(white, 5%);
+                }
+
+                .cal-event {
+                    margin-top: 0em;
+                    padding: 1px;
+                    .rounded(0px);
+                }
+            }
+        }
+    }
 
     .fullName {
         display: none;
     }
     .shortName {
         display: block;
+    }
+
+    #side-col {
+
+        .class-list-container {
+            .border-radius(0,0,0px,5px);
+            font-size: 1em;
+
+            .class-list-item {
+                @colorcode-width: 15px;
+                border-top: 1px solid @line-border-color;
+                padding: 10px;
+                position: relative;
+                padding-left: @colorcode-width + 5px;
+                cursor: pointer;
+
+                &:first-child {
+                    border-top: none;
+                }
+                .class-list-item-colorcode {
+                    position: absolute;
+                    top: 0;
+                    bottom: 0;
+                    left: 0;
+                    width: @colorcode-width;
+                }
+                .class-list-item-text {
+                }
+
+                /* sublist that expands */
+                ul.class-sublist {
+                    display: none;
+                    li {
+                    }
+                }
+            }
+        }
+        .task-list-container {
+
+            margin-top: 0px;
+            .border-radius(0,0,5px,0px);
+            border-top-width: 2px;
+
+            .task-list-item {
+                @box-size: 12px;
+                padding: 10px;
+
+                .task-list-item-box {
+                    width: @box-size;
+                    height: @box-size;
+                    .rounded(2px);
+                }
+                .task-list-item-text {
+                    margin-left: @box-size + 8px;
+                }
+                .task-list-item-tag {
+                    text-indent: -9999px;
+                    @circle-size: 3px;
+                    right: 5px;
+                    width: @circle-size;
+                    height: @circle-size;
+                    .rounded(@circle-size);
+                }
+            }
+        }
     }
 }
 
