colorcode width, option of nowrap on class-list-item-text

--- a/source/css/main.less
+++ b/source/css/main.less
@@ -78,6 +78,7 @@ body {
                 width: @colorcode-width;
             }
             .class-list-item-text {
+                //white-space: nowrap;
             }
 
             /* sublist that expands */
