--- a/source/css/main.less
+++ b/source/css/main.less
@@ -78,7 +78,7 @@ body {
                 width: @colorcode-width;
             }
             .class-list-item-text {
-                //white-space: nowrap;
+                white-space: nowrap;
             }
 
             /* sublist that expands */
