--- a/source/scripts/templates/event.jade
+++ b/source/scripts/templates/event.jade
@@ -1,3 +1,3 @@
 .cal-event(class="color"+classID, data-classid=classID)
-    span.cal-event-time= time
+    span.cal-event-time= time12
     span= name
