--- a/source/css/main.less
+++ b/source/css/main.less
@@ -24,7 +24,8 @@
 }
 
 body {
-    background-color: lightblue;
+    //background-color: lightblue;
+    background-image: url('../images/bg.png');
     color: lighten(#313131,10%);
 }
 
@@ -37,7 +38,7 @@ a {
     }
 }
 
-@outside-margin: 25px;
+@outside-margin: 20px;
 .app-wrapper {
     position: absolute;
     top: @outside-margin;
@@ -236,7 +237,7 @@ a {
             .rounded(3px);
             overflow: hidden;
             color: white;
-            font-size: .8em;
+            font-size: .85em;
             white-space: nowrap;
             .cal-event-time {
                 font-weight: bold;
