--- a/source/css/main.css
+++ b/source/css/main.css
@@ -61,6 +61,46 @@ img {
 p {
   margin: 1em 0;
 }
+/* --ELEMENTs MIXINS --------------------------------------------------------------------------------
+
+    .gradient( @color: #F5F5F5, @start: #EEE, @stop: #FFF )
+    .bw-gradient( @color: #F5F5F5, @start: 0, @stop: 255 )
+    .bordered( @top-color: #EEE, @right-color: #EEE, @bottom-color: #EEE, @left-color: #EEE )
+    .drop-shadow( @x-axis: 0, @y-axis: 1px, @blur: 2px, @alpha: 0.1 )
+    .rounded( @radius: 2px )
+    .border-radius( @topright: 0, @bottomright: 0, @bottomleft: 0, @topleft: 0 )
+    .opacity( @opacity: 0.5 )
+    .transition-duration( @duration: 0.2s )
+    .rotation( @deg:5deg ){
+    .scale( @ratio:1.5 ){
+    .transition( @duration:0.2s, @ease:ease-out )
+    .inner-shadow( @horizontal:0, @vertical:1px, @blur:2px, @alpha: 0.4 )
+    .box-shadow( @arguments )
+    .columns( @colwidth: 250px, @colcount: 0, @colgap: 50px, @columnRuleColor: #EEE, @columnRuleStyle: solid,
+      @columnRuleWidth: 1px )
+    .translate( @x:0, @y:0 )
+
+
+-----GRID MIXINS ------------------------------------------------------------------------------------
+
+  Set these variables (defaults below, 12 col 960px grid)
+  @column-width: 60;
+  @gutter-width: 20;
+  @columns: 12;
+
+  If you want a fluid grid
+  @total-width: 100%;
+
+  Mixins
+  .column(3);
+  .row(9)
+    .column(3,9);
+  .push(2);
+  .pull(2);
+
+*/
+/* Mixins ---------------------------------------------------------------------------*/
+/* Custom buttons -------------------------------------------------------------------*/
 .color1 {
   background-color: #3b8183;
 }
@@ -90,14 +130,29 @@ a:hover {
 }
 .app-wrapper {
   position: absolute;
-  top: 20px;
-  left: 20px;
-  right: 20px;
-  bottom: 20px;
+  top: 30px;
+  left: 30px;
+  right: 30px;
+  bottom: 30px;
+}
+#main-col {
+  background-color: white;
+  box-shadow: #808080 0 1px 12px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  position: absolute;
+  width: 80%;
+  top: 55px;
+  bottom: 0px;
+  left: 20%;
 }
 #side-col {
   position: absolute;
-  top: 60px;
+  top: 65px;
   width: 20%;
   left: 0;
   bottom: 20px;
@@ -248,7 +303,11 @@ a:hover {
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
 }
+.shortName {
+  display: none;
+}
 .toolbar {
+  box-shadow: #808080 0 1px 10px;
   background: #333333;
   background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #262626), color-stop(1, #595959));
   background: -ms-linear-gradient(bottom, #262626, #595959);
@@ -260,28 +319,13 @@ a:hover {
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
   top: 0px;
-  height: 40px;
+  height: 45px;
   left: 21%;
-  right: 20px;
-  background-color: black;
+  right: 30px;
+  background-color: #333;
 }
 .toolbar .content {
   position: static;
-}
-#main-col {
-  background-color: white;
-  box-shadow: #808080 0 1px 12px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  -moz-background-clip: padding;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  position: absolute;
-  width: 80%;
-  top: 50px;
-  bottom: 0px;
-  left: 20%;
 }
 .page.calendar {
   position: absolute;
@@ -311,6 +355,10 @@ a:hover {
 .page.calendar .cal-cell.today {
   background-color: #f2f2f2;
 }
+.page.calendar .cal-cell .cal-cell-number {
+  color: #646464;
+  font-size: .9em;
+}
 .page.calendar .cal-cell .cal-event {
   margin-top: .2em;
   padding: 3px;
@@ -329,12 +377,25 @@ a:hover {
   font-weight: bold;
   margin-right: .3em;
 }
-/* Mixins ---------------------------------------------------------------------------*/
-/* Custom buttons -------------------------------------------------------------------*/
-.shortName {
-  display: none;
-}
 @media screen and (min-width: 0px) and (max-width: 900px) {
+  #main-col {
+    -webkit-border-top-right-radius: 0;
+    -webkit-border-bottom-right-radius: 0;
+    -webkit-border-bottom-left-radius: 0;
+    -webkit-border-top-left-radius: 0;
+    -moz-border-radius-topright: 0;
+    -moz-border-radius-bottomright: 0;
+    -moz-border-radius-bottomleft: 0;
+    -moz-border-radius-topleft: 0;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    top: 30px;
+  }
   .app-wrapper {
     top: 15px;
     left: 15px;
@@ -343,18 +404,37 @@ a:hover {
   }
   .toolbar {
     height: 30px;
+    -webkit-border-top-right-radius: 5;
+    -webkit-border-bottom-right-radius: 0;
+    -webkit-border-bottom-left-radius: 0;
+    -webkit-border-top-left-radius: 5;
+    -moz-border-radius-topright: 5;
+    -moz-border-radius-bottomright: 0;
+    -moz-border-radius-bottomleft: 0;
+    -moz-border-radius-topleft: 5;
+    border-top-right-radius: 5;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 5;
+    -moz-background-clip: padding;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
   }
   .page.calendar {
-    top: 30px;
+    top: 0px;
     left: 0px;
     right: 0px;
     bottom: 0px;
   }
   .page.calendar .cal-cell {
-    padding: 0px;
+    padding: 3px;
   }
   .page.calendar .cal-cell.today {
     background-color: #f2f2f2;
+  }
+  .page.calendar .cal-cell .cal-cell-number {
+    font-size: .8em;
+    margin-bottom: 3px;
   }
   .page.calendar .cal-cell .cal-event {
     margin-top: 0em;
@@ -373,28 +453,28 @@ a:hover {
     display: block;
   }
   #side-col {
-    top: 31px;
+    top: 30px;
+    bottom: 0px;
   }
   #side-col .class-list-container {
     -webkit-border-top-right-radius: 0;
     -webkit-border-bottom-right-radius: 0;
-    -webkit-border-bottom-left-radius: 0px;
-    -webkit-border-top-left-radius: 5px;
+    -webkit-border-bottom-left-radius: 0;
+    -webkit-border-top-left-radius: 0;
     -moz-border-radius-topright: 0;
     -moz-border-radius-bottomright: 0;
-    -moz-border-radius-bottomleft: 0px;
-    -moz-border-radius-topleft: 5px;
+    -moz-border-radius-bottomleft: 0;
+    -moz-border-radius-topleft: 0;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0px;
-    border-top-left-radius: 5px;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
     -moz-background-clip: padding;
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
     font-size: 1em;
   }
   #side-col .class-list-container .class-list-item {
-    border-top: 1px solid #b3b3b3;
     padding: 10px;
     position: relative;
     padding-left: 20px;
@@ -412,6 +492,9 @@ a:hover {
     left: 0;
     width: 15px;
   }
+  #side-col .class-list-container .class-list-item .class-list-item-text {
+    font-size: .85em;
+  }
   #side-col .class-list-container .class-list-item ul.class-sublist {
     display: none;
   }
@@ -419,16 +502,16 @@ a:hover {
     margin-top: 0px;
     -webkit-border-top-right-radius: 0;
     -webkit-border-bottom-right-radius: 0;
-    -webkit-border-bottom-left-radius: 5px;
-    -webkit-border-top-left-radius: 0px;
+    -webkit-border-bottom-left-radius: 0;
+    -webkit-border-top-left-radius: 0;
     -moz-border-radius-topright: 0;
     -moz-border-radius-bottomright: 0;
-    -moz-border-radius-bottomleft: 5px;
-    -moz-border-radius-topleft: 0px;
+    -moz-border-radius-bottomleft: 0;
+    -moz-border-radius-topleft: 0;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
-    border-bottom-left-radius: 5px;
-    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
     -moz-background-clip: padding;
     -webkit-background-clip: padding-box;
     background-clip: padding-box;
@@ -449,6 +532,7 @@ a:hover {
   }
   #side-col .task-list-container .task-list-item .task-list-item-text {
     margin-left: 20px;
+    font-size: .85em;
   }
   #side-col .task-list-container .task-list-item .task-list-item-tag {
     text-indent: -9999px;
@@ -463,41 +547,3 @@ a:hover {
     background-clip: padding-box;
   }
 }
-/* --ELEMENTs MIXINS --------------------------------------------------------------------------------
-
-    .gradient( @color: #F5F5F5, @start: #EEE, @stop: #FFF )
-    .bw-gradient( @color: #F5F5F5, @start: 0, @stop: 255 )
-    .bordered( @top-color: #EEE, @right-color: #EEE, @bottom-color: #EEE, @left-color: #EEE )
-    .drop-shadow( @x-axis: 0, @y-axis: 1px, @blur: 2px, @alpha: 0.1 )
-    .rounded( @radius: 2px )
-    .border-radius( @topright: 0, @bottomright: 0, @bottomleft: 0, @topleft: 0 )
-    .opacity( @opacity: 0.5 )
-    .transition-duration( @duration: 0.2s )
-    .rotation( @deg:5deg ){
-    .scale( @ratio:1.5 ){
-    .transition( @duration:0.2s, @ease:ease-out )
-    .inner-shadow( @horizontal:0, @vertical:1px, @blur:2px, @alpha: 0.4 )
-    .box-shadow( @arguments )
-    .columns( @colwidth: 250px, @colcount: 0, @colgap: 50px, @columnRuleColor: #EEE, @columnRuleStyle: solid,
-      @columnRuleWidth: 1px )
-    .translate( @x:0, @y:0 )
-
-
------GRID MIXINS ------------------------------------------------------------------------------------
-
-  Set these variables (defaults below, 12 col 960px grid)
-  @column-width: 60;
-  @gutter-width: 20;
-  @columns: 12;
-
-  If you want a fluid grid
-  @total-width: 100%;
-
-  Mixins
-  .column(3);
-  .row(9)
-    .column(3,9);
-  .push(2);
-  .pull(2);
-
-*/
