--- a/source/scripts/templates/calendar.jade
+++ b/source/scripts/templates/calendar.jade
@@ -2,6 +2,7 @@
     - for (var i=1 ; i <= startsOn ; i++)
         .cal-cell
     - for (var i=1 ; i <= days ; i++)
-        .cal-cell(data-day=i)= i
+        .cal-cell(data-day=i)
+            .cal-cell-number= i
     - for (var i=1 ; i <= (35-startsOn-days) ; i++)
         .cal-cell
