--- a/source/css/main.css
+++ b/source/css/main.css
@@ -102,35 +102,34 @@ p {
 /* Mixins ---------------------------------------------------------------------------*/
 /* Custom buttons -------------------------------------------------------------------*/
 .color1 {
-  background-color: #3b8183;
+  background-color: #459698;
 }
 .color2 {
-  background-color: #ed303c;
+  background-color: #ef4c57;
 }
 .color3 {
-  background-color: #f5634a;
+  background-color: #f77c67;
 }
 .color4 {
-  background-color: #fad089;
+  background-color: #f9c46c;
 }
 .color5 {
-  background-color: #a0cd64;
+  background-color: #aed47b;
 }
 body {
-  background-image: url('../images/bg.png');
+  background-color: #dfdfdf;
   color: #4b4b4b;
 }
 a {
-  color: #4b4b4b;
+  color: #3b8183;
   text-decoration: none;
 }
 a:hover {
-  color: #3b8183;
-  text-decoration: underline;
+  color: #1b3c3d;
 }
 .app-wrapper {
   position: absolute;
-  top: 30px;
+  top: 0px;
   left: 30px;
   right: 30px;
   bottom: 30px;
@@ -146,13 +145,13 @@ a:hover {
   background-clip: padding-box;
   position: absolute;
   width: 80%;
-  top: 55px;
+  top: 65px;
   bottom: 0px;
   left: 20%;
 }
 #side-col {
   position: absolute;
-  top: 65px;
+  top: 75px;
   width: 20%;
   left: 0;
   bottom: 20px;
@@ -248,6 +247,8 @@ a:hover {
   background-clip: padding-box;
 }
 #side-col .task-list-container .task-list-item {
+  display: block;
+  color: #4b4b4b;
   border-top: 1px solid #b3b3b3;
   padding: 15px;
   position: relative;
@@ -255,6 +256,9 @@ a:hover {
 }
 #side-col .task-list-container .task-list-item:first-child {
   border-top: none;
+}
+#side-col .task-list-container .task-list-item:hover {
+  background-color: #f7f7f7;
 }
 #side-col .task-list-container .task-list-item.checked {
   -moz-opacity: 0.5;
@@ -307,22 +311,29 @@ a:hover {
   display: none;
 }
 .toolbar {
-  box-shadow: #808080 0 1px 10px;
-  background: #333333;
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #262626), color-stop(1, #595959));
-  background: -ms-linear-gradient(bottom, #262626, #595959);
-  background: -moz-linear-gradient(center bottom, #262626 0%, #595959 100%);
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
+  background-color: #4a4a4a;
+  -webkit-border-top-right-radius: 0;
+  -webkit-border-bottom-right-radius: 5;
+  -webkit-border-bottom-left-radius: 5;
+  -webkit-border-top-left-radius: 0;
+  -moz-border-radius-topright: 0;
+  -moz-border-radius-bottomright: 5;
+  -moz-border-radius-bottomleft: 5;
+  -moz-border-radius-topleft: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 5;
+  border-bottom-left-radius: 5;
+  border-top-left-radius: 0;
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
+  border-bottom: 2px solid #333;
+  border-right: 2px solid #333;
+  border-left: 2px solid #333;
   top: 0px;
   height: 45px;
   left: 21%;
   right: 30px;
-  background-color: #333;
 }
 .toolbar .content {
   position: static;
@@ -356,7 +367,7 @@ a:hover {
   background-color: #f2f2f2;
 }
 .page.calendar .cal-cell .cal-cell-number {
-  color: #646464;
+  color: #7e7e7e;
   font-size: .9em;
 }
 .page.calendar .cal-cell .cal-event {
