--- a/source/css/main.less
+++ b/source/css/main.less
@@ -53,11 +53,10 @@ a {
     bottom: 0px;
     //right: 0px;
     left: 20%;
-    .content {
-    }
 }
 
 @import "sidebar.less";
 @import "toolbar.less";
 @import "calendar.less";
 @import "compact.less";
+@import "content.less";
